// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zephr saga => createForm HOC should render a login form of the shape 1`] = `
Array [
  <input
    autoComplete="username"
    className="zephr-input-email-address"
    defaultValue=""
    id="email-address"
    placeholder="Enter your email address"
    required={true}
    type="email"
  />,
  <input
    autoComplete="current-password"
    className="zephr-input-current-password"
    defaultValue=""
    id="current-password"
    placeholder="Enter your password"
    required={true}
    type="password"
  />,
  <input
    type="submit"
    value="Login"
  />,
]
`;

exports[`zephr saga => createForm HOC should render a registration form of the shape 1`] = `
Array [
  <input
    autoComplete="username"
    className="zephr-input-email-address"
    defaultValue=""
    id="email-address"
    placeholder="Enter your email address"
    required={true}
    type="email"
  />,
  <input
    className="zephr-input-full-name"
    defaultValue=""
    id="full-name"
    placeholder="Enter your full name"
    required={true}
    type="text"
  />,
  <input
    autoComplete="new-password"
    className="zephr-input-new-password"
    defaultValue=""
    id="new-password"
    placeholder="Create a password for your account"
    required={true}
    type="password"
  />,
  <input
    autoComplete="new-password"
    className="zephr-input-verify-password"
    defaultValue=""
    id="verify-password"
    placeholder="Confirm your password"
    required={true}
    type="password"
  />,
  <input
    type="submit"
    value="Create an account"
  />,
]
`;
